--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <style>
 	#bg-about {
-  background: url('../images/reza.jpg');
+/*  background: url('../images/reza.jpg');*/
 /*
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -63,7 +63,7 @@
 </div>
 <div class="container" id="about">
   <div class="col-md-6 col-xs-12 no-pad">
-            <div class="bg-about" id="bg-about"></div>
+            <div class="bg-about" id="bg-about"><img src="images/reza.jpg" class="img-responsive" style="width: 100%"></div>
   </div>
   <div class="col-md-6 col-sm-12 col-xs-12 white-col">
     <h1>自我介紹</h1>
